--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li><a href="./1-timer.html">Timer</a></li>
-        <li><a href="./2-snackbar.html">Cnackbar</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
       </ul>
     </nav>
   </body>
