--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css/1-timer.css" />
   </head>
   <body>
-    <a href="./index.html">Go to home</a>
     <section>
+      <a href="./index.html">Go to home</a>
+    </section>
+    <div class="wrapper">
       <input type="text" id="datetime-picker" />
       <button type="button" data-start>Start</button>
-
       <div class="timer">
         <div class="field">
           <span class="value" data-days>00</span>
@@ -31,8 +32,7 @@
           <span class="label">Seconds</span>
         </div>
       </div>
-    </section>
-
-    <script type="module" src="./js/1-timer.js"></script>
+    </div>
+    <script src="./js/1-timer.js" type="module"></script>
   </body>
 </html>
