--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script defer type="module" src="./main.js"></script>
   </head>
   <body>
     <nav>
@@ -25,5 +26,6 @@
         <li><a href="./2-snackbar.html">Snackbar</a></li>
       </ul>
     </nav>
+    
   </body>
 </html>
