--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/2-snackbar.css" />
   </head>
   <body>
+    <img src="./img/icon-error.png" alt="asdasd">
     <a href="./index.html">Go to home</a>
     <section>
       <form class="form">
